Add Sapphire mode to oil service record
